# hexlet-flask-example

./: Makefile  data_users.json  example.py  pyproject.toml  test.py  validator.py
templates/: index.html
templates/users/: index.html  new.html  show.html
